--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "buffer": "^6.0.3",
+    "qrcode-pix": "^5.0.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-qrcode-pix": "^5.0.0",
     "react-router-dom": "^7.10.1"
   },
   "devDependencies": {
